--- a/example_controls/index.html
+++ b/example_controls/index.html
@@ -18,7 +18,7 @@
 <script type='text/javascript' src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 <script src="../js/jquery.mobile.custom.min.js"></script>
 <script src="../js/phantom.slider.min.js"></script>
-<link rel='canonical' href='http://sympies.com/phantom_jquery_touch_slider/' />
+<link rel='canonical' href='http://pantherius.com/phantom_jquery_touch_slider/' />
 <style>
 html, body
 {
@@ -164,7 +164,7 @@ $(document).ready(function() {
 			</form>
 		</div>
 		<div id="project">
-			<a style="float: left;" href="http://sympies.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
+			<a style="float: left;" href="http://pantherius.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
 			<a style="float: right;" target="_blank" href="http://www.flickr.com/photos/monkey-kc/">Demo Images made by Kalvin Chan</a>
 		</div>
 </body>
