--- a/example_fullscreen/index.html
+++ b/example_fullscreen/index.html
@@ -18,7 +18,7 @@
 <script type='text/javascript' src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 <script src="../js/jquery.mobile.custom.min.js"></script>
 <script src="../js/phantom.slider.min.js"></script>
-<link rel='canonical' href='http://sympies.com/phantom_jquery_touch_slider/' />
+<link rel='canonical' href='http://pantherius.com/phantom_jquery_touch_slider/' />
 <style>
 html, body
 {
@@ -121,7 +121,7 @@ $(document).ready(function() {
 						<h2>Smart & LightWeight jQuery Slider</h2>
 						<h6>Use arrow keys, swipe or the icons at the side to scroll</h6>
 						<div id="project">
-							<a style="float: left;" href="http://sympies.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
+							<a style="float: left;" href="http://pantherius.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
 							<a style="float: right;" target="_blank" href="http://www.flickr.com/photos/monkey-kc/">Demo Images made by Kalvin Chan</a>
 						</div>
 					</span>
@@ -135,7 +135,7 @@ $(document).ready(function() {
 							<input type="submit" value="SEND">
 						</form>
 						<div id="project">
-							<a style="float: left;" href="http://sympies.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
+							<a style="float: left;" href="http://pantherius.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
 							<a style="float: right;" target="_blank" href="http://www.flickr.com/photos/monkey-kc/">Demo Images made by Kalvin Chan</a>
 						</div>
 					</span>
@@ -146,7 +146,7 @@ $(document).ready(function() {
 						<h2>Mobile Swipe Support</h2>
 						<h6>Responsive, always fit to the container element</h6>
 						<div id="project">
-							<a style="float: left;" href="http://sympies.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
+							<a style="float: left;" href="http://pantherius.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
 							<a style="float: right;" target="_blank" href="http://www.flickr.com/photos/monkey-kc/">Demo Images made by Kalvin Chan</a>
 						</div>
 					</span>
@@ -157,7 +157,7 @@ $(document).ready(function() {
 						<h2>60+ Animation Styles combined with jQuery UI</h2>
 						<h6>Fade and Slide with 30+ Easing</h6>
 						<div id="project">
-							<a style="float: left;" href="http://sympies.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
+							<a style="float: left;" href="http://pantherius.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
 							<a style="float: right;" target="_blank" href="http://www.flickr.com/photos/monkey-kc/">Demo Images made by Kalvin Chan</a>
 						</div>
 					</span>
@@ -168,7 +168,7 @@ $(document).ready(function() {
 						<h2>Download for FREE</h2>
 						<h5>Available on GitHub</h5>
 						<div id="project">
-							<a style="float: left;" href="http://sympies.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
+							<a style="float: left;" href="http://pantherius.com/phantom-slider-jquery-touch-slider-plugin">Check out the Project Page</a>
 							<a style="float: right;" target="_blank" href="http://www.flickr.com/photos/monkey-kc/">Demo Images made by Kalvin Chan</a>
 						</div>
 					</span>
